# karaoke

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
src/karaoke/: __main__.py  _songs.py  cli.py  playlist.py  playlist_test.py  rating.py  server.py  session.py  session_test.py  song.py  storage.py
src/karaoke/alembic/: env.py
src/karaoke/alembic/versions/: d3ffc33b9de0_initial.py
src/karaoke/core/: rating.py  session.py  song.py  song_test.py  user.py  utils.py  utils_test.py
src/karaoke/populate_data/: create_songs.sh  create_users.sh
src/karaoke/static/: main.css  main.js
src/karaoke/templates/: add-song.html  base.html  companion.html  index.html  player.html  playlist.html  rate.html  songs-in-session.html  songs.html  splash.html  start-session.html  users.html
