[tool.poetry]
name = "karaoke"
version = "0.1.0"
description = ""
authors = ["Amir Rachum <amir@rachum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
redis = "*"
sqlalchemy = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
types-PyYAML = "*"
types-redis = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
